--- a/src/Components/Navbar/NavbarStyles.css
+++ b/src/Components/Navbar/NavbarStyles.css
@@ -4,6 +4,8 @@
   align-items: center;
   padding: 1rem;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 90px;
   z-index: 10;
